[gd_scene load_steps=3 format=3 uid="uid://cxyz1w2j3klm"]

[ext_resource type="PackedScene" path="res://src/scenes/ui/menus/settings_menu_standalone.tscn" id="1_standalone_demo"]
[ext_resource type="Script" path="res://src/scripts/demo/settings_menu_standalone_demo.gd" id="2_standalone_demo"]

[node name="SettingsMenuStandaloneDemo" type="Node"]
script = ExtResource("2_standalone_demo")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.3, 0.4, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Settings Menu Demo (Standalone)"
horizontal_alignment = 1

[node name="InstructionLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Press SPACE to open settings menu"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Settings Menu: Closed"
horizontal_alignment = 1

[node name="VolumeStatus" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Move sliders and toggle checkboxes to see changes"
horizontal_alignment = 1

[node name="SettingsMenuStandalone" parent="." instance=ExtResource("1_standalone_demo")]